@@ -24,6 +24,7 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 ==== Feature
 
+- Added namespace `ccw.events` which is a thin wrapper around Eclipse 4 IEventBroker, allowing User plugin developers to subscribe to topics, post / send data to topics.
 - `defhandler` now accepts closures in addition to var symbols.
 - in `defkeybinding`, `Cmd` is now an alias for `M1`, thus making it OS portable (`Cmd` will be replaced to `COMMAND` for OS X, and `Ctrl` for Windows/Linux). If you really insist on being specific, you can you `COMMAND` or `CTRL` which are not interpreted.
 ==== Fix
